infrastructure/gateway/gateway-config.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: constellation-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
