infrastructure/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: constellation-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: constellation-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: constellation-proxy-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https-jonnowang
      protocol: HTTPS
      port: 443
      hostname: jonno.wang
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: frontend-portfolio-tls
    - name: https-jonnowang-code
      protocol: HTTPS
      port: 443
      hostname: code.jonno.wang
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: codeserver-tls
    - name: https-jonnowang-vert
      protocol: HTTPS
      port: 443
      hostname: vert.jonno.wang
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: vert-tls
    - name: https-jonnowang-raffle
      protocol: HTTPS
      port: 443
      hostname: raffle.jonno.wang
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: raffle-tls
    - name: https-jonnowang-chore
      protocol: HTTPS
      port: 443
      hostname: chore.jonno.wang
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: chore-store-tls
    - name: mysql-debug
      protocol: TCP
      port: 3306
      allowedRoutes:
        kinds:
        - kind: TCPRoute
